Fixed layout issues

--- a/move_fitness/static/css/base.css
+++ b/move_fitness/static/css/base.css
@@ -75,7 +75,7 @@ body {
 }
 
 .container .move-fitness-logo {
-    background: url(/static/images/sprite_base.png) -184px top;
+    background: url(/static/images/sprite_base.png) -184px top no-repeat;
     width: 225px;
     height: 143px;
 }
