--- a/move_fitness/static/css/slimbox/slimbox.css
+++ b/move_fitness/static/css/slimbox/slimbox.css
@@ -7,7 +7,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #000;
+	background-color: #3E3D3E;
 	cursor: pointer;
 }
 
@@ -28,6 +28,8 @@
 	top: 0;
 	border: 10px solid #fff;
 	background-repeat: no-repeat;
+    /* height: 340px; */
+    /* width: 620px; */
 }
 
 #lbPrevLink, #lbNextLink {
@@ -55,13 +57,11 @@
 }
 
 #lbBottom {
-	font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
 	font-size: 10px;
 	color: #666;
-	line-height: 1.4em;
+	line-height: 4.4em;
 	text-align: left;
-	border: 10px solid #fff;
-	border-top-style: none;
+    background: url(../../images/sprite_base.png) 880px -28px #252525 no-repeat;
 }
 
 #lbCloseLink {
@@ -75,9 +75,13 @@
 }
 
 #lbCaption, #lbNumber {
-	margin-right: 71px;
+	/* margin-right: 71px; */
+    margin-left: 15px;
+	height: 43px;
 }
 
 #lbCaption {
 	font-weight: bold;
+    font-size: 16px;
+    color: #f2f0f1;
 }
